Fix project pages on mobile and add GBMP jobs

--- a/source/stylesheets/components/_icons.scss
+++ b/source/stylesheets/components/_icons.scss
@@ -14,36 +14,54 @@
 
   &--project-seg {
     background: image-url('icons/projects/seg.svg') center center no-repeat;
+    &--colored {
+      background: image-url('icons/projects/seg-color.svg') top right no-repeat;
+    }
     &--colored-bg {
       background-color: $seg;
     }
   }
   &--project-ord {
     background: image-url('icons/projects/ord.svg') center center no-repeat;
+    &--colored {
+      background: image-url('icons/projects/ord-color.svg') top right no-repeat;
+    }
     &--colored-bg {
       background-color: $ord;
     }
   }
   &--project-gbmp {
     background: image-url('icons/projects/gbmp.svg') center center no-repeat;
+    &--colored {
+      background: image-url('icons/projects/gbmp-color.svg') top right no-repeat;
+    }
     &--colored-bg {
       background-color: $gbmp;
     }
   }
   &--project-tech {
     background: image-url('icons/projects/tech.svg') center center no-repeat;
+    &--colored {
+      background: image-url('icons/projects/tech-color.svg') top right no-repeat;
+    }
     &--colored-bg {
       background-color: $tech;
     }
   }
   &--project-cap {
     background: image-url('icons/projects/cap.svg') center center no-repeat;
+    &--colored {
+      background: image-url('icons/projects/cap-color.svg') top right no-repeat;
+    }
     &--colored-bg {
       background-color: $cap;
     }
   }
   &--project-futures {
     background: image-url('icons/projects/futures.svg') center center no-repeat;
+    &--colored {
+      background: image-url('icons/projects/futures-color.svg') top right no-repeat;
+    }
     &--colored-bg {
       background-color: $futures;
     }
