--- a/source/stylesheets/components/_panels.scss
+++ b/source/stylesheets/components/_panels.scss
@@ -2,7 +2,8 @@
   background: $white;
   border-radius: $global-radius;
   box-shadow: $subtle-shadow;
-  padding: rem-calc(24);
+  padding: rem-calc(24 24 64);
+  position: relative;
 
   > h4 {
     text-align: center;
@@ -19,5 +20,9 @@
     display: block;
     width: grid-calc(2,4);
     margin: auto;
+    position: absolute;
+    bottom: rem-calc(24);
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
